# imagika

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: compress.rs  errors.rs  lib.rs  main.rs  resize.rs
