[package]
name = "imagika"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
zip = "0.5"
tempfile = "3"
structopt = "0.3"
rayon = "1.5.1"
regex = "1.5.4"
fast_image_resize = "0.3.0"
image = "0.23.14"